k8s-manifests/cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: gcr.io/shaik9848/cart-service:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: NodePort
  selector:
    app: cart-service
  ports:
  - port: 3002
    targetPort: 3002
